--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Entendento o Git e Github</title>
 </head>
 <body>
-    <h1>Em construção!!!!</h1>
+   <header>
+    <nav>
+        <span>Home</span>
+        <span>Trabalhos</span>
+    </nav>
+   </header>
 </body>
 </html>
