--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>Entendento o Git e Github</title>
 </head>
 <body>
-   <header>
-    <nav>
-        <span>Home</span>
-        <span>Trabalhos</span>
-    </nav>
-   </header>
+   <h1>Em contrução</h1>
 </body>
 </html>
